<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_played"
            android:icon="@drawable/ic_gamepad"
            android:title="@string/my_games" />
        <item
            android:id="@+id/nav_backlog"
            android:icon="@drawable/ic_menu_backlog"
            android:title="@string/menu_backlog" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile2"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_sign_out"
            android:title="@string/menu_sign_out" />
    </group>
</menu>