<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".ui.gameDetail.GameDetailFragment">

    <ImageView
        android:id="@+id/image_game_artwork"
        android:layout_width="0dp"
        android:layout_height="164dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_artwork"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_game_cover"
        android:layout_width="150dp"
        android:layout_height="230dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="95dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_game_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/image_game_cover"
        app:layout_constraintTop_toTopOf="@id/image_game_cover"
        tools:text="Game Title" />

    <TextView
        android:id="@+id/text_game_release_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/text_game_title"
        app:layout_constraintTop_toBottomOf="@id/text_game_title"
        tools:text="Game Release Date" />

    <TextView
        android:id="@+id/text_rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/rating"
        app:layout_constraintEnd_toStartOf="@id/text_rating"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/text_game_title"
        app:layout_constraintTop_toBottomOf="@id/text_game_title" />

    <TextView
        android:id="@+id/text_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toEndOf="@id/text_rating_label"
        app:layout_constraintTop_toBottomOf="@id/text_game_title"
        android:text="@{String.valueOf(game.rating)}" />

    <TextView
        android:id="@+id/text_platform_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/platform"
        app:layout_constraintEnd_toStartOf="@id/textGamePlatforms"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_game_cover" />

    <TextView
        android:id="@+id/textGamePlatforms"
        android:layout_width="280dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:layout_marginTop="28dp"
        android:text="@{String.valueOf(game.rating)}"
        app:layout_constraintStart_toEndOf="@id/text_platform_label"
        app:layout_constraintTop_toBottomOf="@id/image_game_cover" />

    <TextView
        android:id="@+id/text_game_summary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_platform_label"
        tools:text="Game Summary" />

    <!-- 'Played' ImageButton -->


    <ImageButton
        android:id="@+id/button_played"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/no_play"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_game_summary" />

    <ImageButton
        android:id="@+id/button_backlog"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/no_backlog"
        android:background="@color/transparent"
        app:layout_constraintStart_toEndOf="@id/button_played"
        app:layout_constraintTop_toBottomOf="@id/text_game_summary" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:progressTint="?attr/colorSecondaryVariant"
        android:secondaryProgressTint="?attr/colorSecondaryVariant"
        android:progressBackgroundTint="#DFDFDF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_played" />

    <EditText
        android:id="@+id/editText_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/write_a_review"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/similar_games"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/editText_review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:scrollbars="none"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_rec_game" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
